Swagger config. Started adding Participants entities.